tests/purs/failing/TypeSynonymCycle.out
Error found:
at tests/purs/failing/TypeSynonymCycle.purs:4:1 - 4:11 (line 4, column 1 - line 4, column 11)

   A cycle appears in a set of type synonym definitions:

    {[33mA[0m, [33mB[0m}

  Cycles are disallowed because they can lead to loops in the type checker.
  Consider using a 'newtype' instead.


See https://github.com/purescript/documentation/blob/master/errors/CycleInTypeSynonym.md for more information,
or to contribute content related to this error.

